# thtools

./: .coveragerc  .gitignore  .readthedocs-custom-steps.yaml  .readthedocs-custom-steps.yml  .readthedocs.yaml  .sourcery.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_LICENSES.sh  TODO.md  pyproject.toml  refs.bib  requirements.txt  setup.cfg  setup.py  setup_assets.py
.github/: dependabot.yml
.github/workflows/: autoapp.yml  autolicense.yml  autopr.yml  autotest.yml  autowheel.yml  codeql-analysis.yml  contribution.yml  wheels.yml
app/ToeholdTools.app/Contents/: Info.plist
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/_templates/: attributes.rst  classes.rst
docs/source/api/: USE_TIMER.rst  core.rst  crt.rst  fasta.rst  utils.rst
docs/source/basic/: install.rst  quick_start.rst
docs/source/devnotes/: general.rst  how-it-works.rst  nu3.rst  performance.rst  progress.rst  terms.rst
registry/: 2017_CLSB_UK.toml  2020_CSMU_Taiwan.toml  README.md  config-example.toml  contrib.py  deploy.sh  requirements.txt  startup-script.sh  startup.sh
registry/config/: 2017_CLSB_UK-0.0.toml  2017_CLSB_UK-0.1.toml  2017_CLSB_UK-0.toml  2017_CLSB_UK-1.0.toml  2017_CLSB_UK-1.1.toml  2017_CLSB_UK-1.toml  2019_SASTRA_Thanjavur-0.toml  2019_SASTRA_Thanjavur-1.toml  2019_SASTRA_Thanjavur.toml  2020_CSMU_Taiwan-0.0.toml  2020_CSMU_Taiwan-0.1.toml  2020_CSMU_Taiwan-0.toml  2020_CSMU_Taiwan-1.toml  2020_CSMU_Taiwan-2.0.toml  2020_CSMU_Taiwan-2.1.toml  2020_CSMU_Taiwan-2.toml  2021_City_of_London_UK-0.0.toml  2021_City_of_London_UK-0.1.toml  2021_City_of_London_UK-0.toml  2021_City_of_London_UK-1.0.toml  2021_City_of_London_UK-1.1.toml  2021_City_of_London_UK-1.toml
src/thtools/: __init__.py  __main__.py  analysis.c  analysis.pyx  app.py  core.pyi  core.pyx  crt.py  fasta.py  utility.py  utils.py
src/thtools/app/: __init__.py  _app.py  build.sh  package-lock.json  package.json
src/thtools/app/web/: index.css  index.html  index.js  manifest.json  scroll.js
src/thtools/app/web/styles/: Montserrat.css
src/thtools/web/: index.js
test/: conftest.py  requirements.txt  test_core.py  test_crt.py  test_fasta.py  test_general.py  test_utils.py
thtools/: __init__.py  __main__.py  _meta.py  analysis.c  analysis.pyx  app.py  demos.py  utility.py
thtools/miRBase/: Acacia auriculiformis.frn  Acacia mangium.frn  Acyrthosiphon pisum.frn  Aedes aegypti.frn  Aegilops tauschii.frn  Alligator mississippiensis.frn  Amborella trichopoda.frn  Amphimedon queenslandica.frn  Anas platyrhynchos.frn  Anolis carolinensis.frn  Anopheles gambiae.frn  Apis mellifera.frn  Aquilegia caerulea.frn  Arabidopsis lyrata.frn  Arabidopsis thaliana.frn  Arachis hypogaea.frn  Artibeus jamaicensis.frn  Ascaris suum.frn  Asparagus officinalis.frn  Astatotilapia burtoni.frn  Ateles geoffroyi.frn  Avicennia marina.frn  BK polyomavirus.frn  Bactrocera dorsalis.frn  Bandicoot papillomatosis.frn  Biston betularia.frn  Bombyx mori.frn  Bos taurus.frn  Bovine foamy.frn  Bovine herpesvirus.frn  Bovine leukemia.frn  Brachypodium distachyon.frn  Branchiostoma belcheri.frn  Branchiostoma floridae.frn  Brassica napus.frn  Brassica oleracea.frn  Brassica rapa.frn  Brugia malayi.frn  Bruguiera cylindrica.frn  Bruguiera gymnorhiza.frn  (+225 more)
thtools/web/: index.html  index.js  results.csv
wheelhouse/: thtools-0.0.1-cp37-cp37m-manylinux_2_5_i686.manylinux1_i686.manylinux_2_12_i686.manylinux2010_i686.whl  thtools-0.0.1-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl  thtools-0.0.1-cp37-cp37m-win32.whl  thtools-0.0.1-cp37-cp37m-win_amd64.whl  thtools-0.0.1-cp38-cp38-macosx_10_9_x86_64.whl  thtools-0.0.1-cp38-cp38-manylinux_2_5_i686.manylinux1_i686.manylinux_2_12_i686.manylinux2010_i686.whl  thtools-0.0.1-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl  thtools-0.0.1-cp38-cp38-win32.whl  thtools-0.0.1-cp38-cp38-win_amd64.whl  thtools-0.0.1-cp39-cp39-manylinux_2_5_i686.manylinux1_i686.manylinux_2_12_i686.manylinux2010_i686.whl  thtools-0.0.1-cp39-cp39-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl  thtools-0.0.1-cp39-cp39-win32.whl  thtools-0.0.1-cp39-cp39-win_amd64.whl  thtools-0.0.1-pp37-pypy37_pp73-manylinux_2_5_i686.manylinux1_i686.manylinux_2_12_i686.manylinux2010_i686.whl  thtools-0.0.1-pp37-pypy37_pp73-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl  thtools-0.0.1-pp37-pypy37_pp73-win_amd64.whl
