[project]
requires-python = ">=3.6"

[build-system]
requires = ["setuptools<49.2.0", "wheel", "numpy", "Cython", "pygments"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp*" # Skip building for PyPy
build-frontend = "build" # build with https://github.com/pypa/build/ instead of pip
