[metadata]
name = thtools
version = attr: thtools.__version__
description = A library for the analysis of toehold switch riboregulators.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/lkn849/thtools/
author = Lucas Ng
author_email = lkn849@gmail.com
license = MIT
license_files = LICENSE
platform = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = false
include_package_data = true
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4.0
setup_requires =
    setuptools>=57.1.0
    wheel>=0.36.2
    numpy>=1.21.0
    Cython>=0.29.23
install_requires =
    eel>=0.14.0
    nupack>=4.0.0
    pathos>=0.2.8
    prettytable>=2.1.0
    psutil>=5.8.0

[options.packages.find]
where=src